--- a/TODO
+++ b/TODO
@@ -1,16 +1,15 @@
+re-add player character
 improve movement (smoother)
-render faces instead of cubes (multi-textured blocks)
+compact blocks.java (json, hashmap, etc?), merge with block cache (hashmap with loaded blocks)
 separate rendering (visual blocks, RenderEngine class) from blocks in memory (Chunk class)
-chunk meshes & chunk collision
 ambient occlusion
 Move World to Main, RenderEngine only read
-Improve Player Control (put update() classs in simpleUpdate or some shit)
-Culling
 Block placing and breaking
 Saving
 Items
 Entities
-greedy meshing
+
+greedy meshing?
 Multiplayer?
 
 App (SimpleApplication)
@@ -23,15 +22,13 @@ App (SimpleApplication)
 │
 ├─ World   ← OWNS ALL GAME STATE
 │   │
-│   ├─ ChunkManager
-│   │   └─ Chunk*
-│   │        ├─ block ID arrays
-│   │        ├─ light data
-│   │        └─ scheduled block ticks
+│   ├─ Chunk
+│   │   ├─ light data
+│   │   └─ scheduled block ticks
 │   │
 │   ├─ EntityManager
-│   │   └─ Entity*
-│   │        └─ Player (entity)
+│   │   ├─ Entity
+│   │   └─ Player (entity)
 │   │
 │   └─ BlockEntityManager
 │       └─ BlockEntity*
