cleaned up code, fixed graininess, redid comments and todo

--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
-re-add player character
 improve movement (smoother)
+implement render distance
 compact blocks.java (json, hashmap, etc?), merge with block cache (hashmap with loaded blocks)
 separate rendering (visual blocks, RenderEngine class) from blocks in memory (Chunk class)
 ambient occlusion
-Move World to Main, RenderEngine only read
 Block placing and breaking
 Saving
 Items
