finally fucking managed to merge gui and block placement

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+move GUI to RenderEngine
 only create meshes for chunks around Player
 dont render invisible chunks (data more separate from rendering)
 add block hardness, mining tool capability for future
