--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 move GUI to RenderEngine
+add bindings to KeyMapping, test
 only create meshes for chunks around Player
 dont render invisible chunks (data more separate from rendering)
 add block hardness, mining tool capability for future
@@ -6,10 +7,8 @@ add selected block border
 improve movement (smoother)
 fix non-solid blocks breaking the game (mesh)
 figure out stepHeight
-add gui (crosshair)
 add proper comments
 generalize block actions (using, hitting, etc)
-add lower and upper camera bound (so no camera backflips)
 clear blockMaterialCache items
 compact blocks.java (json, hashmap, etc?), merge with block cache ? (hashmap with loaded blocks)
 separate rendering (visual blocks, chunk meshes, RenderEngine class) from blocks in memory (Chunk class)
@@ -20,6 +19,8 @@ saving
 items
 entities
 lod
+
+add lower and upper camera bound (so no camera backflips)?
 greedy meshing?
 multiplayer?
 
