--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 move GUI to RenderEngine
 add bindings to KeyMapping, test
 only create meshes for chunks around Player
+set initial player pos to top coordinate of chunk
 dont render invisible chunks (data more separate from rendering)
 add block hardness, mining tool capability for future
 add selected block border
