added comments, updated todo

--- a/TODO
+++ b/TODO
@@ -10,16 +10,22 @@ not binding besides prio 0, just suggestions
 
 [[todo list]]
 
+classes to comment:
+TerrainGenerator
+BlockInteractionSystem
+
 [both] {2} add proper comments
-[filp] {1} add block selection
-[filp] {1} improve checking for visible blocks (across chunk borders, etc.)
+[filp] {0} add block selection indicator
+[filp] {1} improve checking for visible faces (across chunk borders, etc.)
 [filp] {1} unload chunks
 [filp] {2} only create meshes for chunks around Player (simulation distance)
 [filp] {2} separate rendering (visual blocks, chunk meshes, RenderEngine class) from blocks in memory (Chunk class)
 [filp] {3} add non-solid blocks
 [filp] {3} dont render invisible chunks (data more separate from rendering) 
+[filp] {3} only render chunks in view (y-axis as well)
 [free] {1} add sound (to block breaking/placing for now)
 [free] {1} set initial player pos to top coordinate of chunk 
+[free] {2} add proper world generation
 [free] {2} compact blocks.java (json, hashmap, etc?), merge with block cache ? (hashmap with loaded blocks)
 [free] {2} figure out stepHeight (if to use, how to do stairs)
 [free] {2} multithread chunk generation (rendering on main thread)
